--- a/sass/pages/_shop.scss
+++ b/sass/pages/_shop.scss
@@ -229,3 +229,7 @@
 .woocommerce .blog__sidebar {
   padding-top: 5.5rem;
 }
+
+#add_payment_method #payment ul.payment_methods li img, .woocommerce-cart #payment ul.payment_methods li img, .woocommerce-checkout #payment ul.payment_methods li img {
+  width: initial;
+}
